# pyfitsrotate

./: README.md  pyproject.toml
fitsrotate/: __init__.py  fitsrotate.py
