[tool.poetry]
name = "pyfitsrotate"
version = "0.0.0"
description = "Rotate a FITS file to put spectral axis first"
authors = ["Alec Thomson"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24"
astropy = "^5"
dask = "^2023"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
